# open-msupply-mcp-server

./: .gitignore  .mcpbignore  Cargo.toml  README.md  manifest.json  open-msupply.MCPB
.github/workflows/: release.yml
rust/src/: error.rs  main.rs
rust/src/tools/: invoices.rs  mod.rs  stock.rs
scripts/: build-mcpb.sh
src/: client.rs  config.rs  format.rs
src/tools/: assets.rs  cold_chain.rs  dashboard.rs  fulfil.rs  inbound_shipments.rs  invoices.rs  items.rs  locations.rs  mod.rs  outbound_shipments.rs  programs.rs  purchase_orders.rs  reports.rs  requisitions.rs  rnr.rs  stocktakes.rs  stores.rs  vaccine_courses.rs
